--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         </div>
         <div class="article">
             <div class="section">
-                <h3 class="project-title">Your Projects</h3>
+                <h3 class="article-title">Your Projects</h3>
                 <div class="projects">
                     <div class="card">
                         <p class="title">Super Cool Project</p>
@@ -161,6 +161,61 @@
                     </div>
                 </div>            
             </div>
+            <div class="aside">
+                <h3 class="article-title">Announcement</h3>
+                <div class="announcements">
+                    <div class="announcement">
+                        <h4>Site Maintenance</h4>
+                        <p>Vestibulum condimentum tellus lacus,
+                            in accumsan elit maximus ac. Donec
+                            hendrerit sodales congue..</p>
+                    </div>
+                    <div class="border"></div>
+                    <div class="announcement">
+                        <h4>Community Share Day</h4>
+                        <p>Nam vel lectus tincidunt, rutrum nulla eu, ornare libero. Aliquam dictum
+                        accumsan porttitor...</p>
+                    </div>
+                    <div class="border"></div>
+                    <div class="announcement final">
+                        <h4>Updated Privacy Policy</h4>
+                        <p>Phasellus efficitur nisi eget elit consectetur, eget condimentum ante
+                        auctor. Cras fringilla sagittis sem in mattis.</p>
+                    </div>
+                </div>
+                <h3 class="article-title">Trending</h3>
+                <div class="trending">
+                    <div class="trend">
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" class="trend-pic"><path d="M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12C22,10.84 21.79,9.69 21.39,8.61L19.79,10.21C19.93,10.8 20,11.4 20,12A8,8 0 0,1 12,20A8,8 0 0,1 4,12A8,8 0 0,1 12,4C12.6,4 13.2,4.07 13.79,4.21L15.4,2.6C14.31,2.21 13.16,2 12,2M19,2L15,6V7.5L12.45,10.05C12.3,10 12.15,10 12,10A2,2 0 0,0 10,12A2,2 0 0,0 12,14A2,2 0 0,0 14,12C14,11.85 14,11.7 13.95,11.55L16.5,9H18L22,5H19V2M12,6A6,6 0 0,0 6,12A6,6 0 0,0 12,18A6,6 0 0,0 18,12H16A4,4 0 0,1 12,16A4,4 0 0,1 8,12A4,4 0 0,1 12,8V6Z" /></svg>
+                        <div class="trend-text">
+                            <p>@tegan</p> <br>
+                            <p>World Peace Builder</p>
+                        </div>
+                    </div>
+                    <div class="trend">
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" class="trend-pic"><path d="M8.39 21L3 15.61C3 16.7 3.04 17.71 3.2 18.63C3.35 19.55 3.5 20.1 3.71 20.29C3.9 20.5 4.44 20.65 5.35 20.81S7.27 21 8.39 21M15.5 9.89L9.89 15.5L8.5 14.11L14.11 8.5L15.5 9.89M3.29 13.08L10.92 20.71C13.7 20.21 15.9 19.15 17.53 17.53C19.15 15.9 20.21 13.7 20.71 10.92L13.08 3.29C10.3 3.79 8.1 4.85 6.47 6.47S3.79 10.3 3.29 13.08M15.61 3L21 8.39C21 7.3 20.96 6.29 20.81 5.37C20.65 4.45 20.5 3.9 20.29 3.71C20.1 3.5 19.56 3.35 18.65 3.2S16.73 3 15.61 3Z" /></svg>
+                        <div class="trend-text">
+                            <p>@morgan</p> <br>
+                            <p>Super Cool Project</p>
+                        </div>
+                    </div>
+                    <div class="trend">
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" class="trend-pic"><path d="M13.5,5.5C14.59,5.5 15.5,4.58 15.5,3.5C15.5,2.38 14.59,1.5 13.5,1.5C12.39,1.5 11.5,2.38 11.5,3.5C11.5,4.58 12.39,5.5 13.5,5.5M9.89,19.38L10.89,15L13,17V23H15V15.5L12.89,13.5L13.5,10.5C14.79,12 16.79,13 19,13V11C17.09,11 15.5,10 14.69,8.58L13.69,7C13.29,6.38 12.69,6 12,6C11.69,6 11.5,6.08 11.19,6.08L6,8.28V13H8V9.58L9.79,8.88L8.19,17L3.29,16L2.89,18L9.89,19.38Z" /></svg>
+                        <div class="trend-text">
+                            <p>@kendall</p> <br>
+                            <p>Life Changing App</p>
+                        </div>
+                    </div>
+                    <div class="trend">
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" class="trend-pic"><path d="M5,3H7L10,5L7,7V8.33C8.47,8.12 10.18,8 12,8C13.82,8 15.53,8.12 17,8.33V3H19L22,5L19,7V8.71C20.85,9.17 22,9.8 22,10.5C22,11.88 17.5,13 12,13C6.5,13 2,11.88 2,10.5C2,9.8 3.15,9.17 5,8.71V3M12,9.5C8.69,9.5 7,9.67 7,10.5C7,11.33 8.69,11.5 12,11.5C15.31,11.5 17,11.33 17,10.5C17,9.67 15.31,9.5 12,9.5M12,14.75C15.81,14.75 19.2,14.08 21.4,13.05L20,21H15V19A2,2 0 0,0 13,17H11A2,2 0 0,0 9,19V21H4L2.6,13.05C4.8,14.08 8.19,14.75 12,14.75Z" /></svg>
+                        <div class="trend-text">
+                            <p>@alex</p> <br>
+                            <p>No Traffic Maker</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            
         </div>
     </div>    
 </body>
